k8s/communication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication
  namespace: syncup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communication
  template:
    metadata:
      labels:
        app: communication
    spec:
      containers:
        - name: communication
          image: ajfer/syncup-comm-service
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: communication-clusterid-service
  namespace: syncup
spec:
  type: NodePort
  ports:
    - port: 3004
      targetPort: 3004
  selector:
    app: communication
