k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: syncup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: ajfer/syncup-user-service
          resources:
            requests:
              memory: "256Mi" 
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterid-service
  namespace: syncup
spec:
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: user
